traversal.snake.Snake.scala.error
Compilation error:
Snake:18: error: Boolean.type does not take parameters
def verifFin() = Boolean{
                        ^